bpo-29935: Fixed error messages in the index() method of tuple, list and deque when pass indices of wrong type.